Archive2/42/524e53b6f0e053/output
main.cpp: In function ‘int main()’:
main.cpp:5:73: error: ‘assert’ was not declared in this scope
     assert(int((0.1 - std::numeric_limits<double>::epsilon()) * 10) == 0);
                                                                         ^
